# entrance-checker

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  index.js  launch.sh  nx.json  package-lock.json  package.json
app/: control.js  db.js  logger.js
database/: .gitignore  Dockerfile  Dockerfile.test  README.md  create_db_image.sh  launch_db.sh
database/csv/: attendees.csv  attendees.example.csv  fdp_staff.csv  fdp_staff.example.csv  get_fake_attendees.py
database/sql_scripts/: import_data.sql  init_db.sql  init_schema.sql  reinit_db.sql
old/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
old/app/: control.js  db.js
old/database/: .dockerignore  .gitignore  README.md  create_db_image.sh
old/database/sql_scripts/: init_db.sql  init_schema.sql
old/views/: checkTicket.pug  error.pug  login.pug
public/css/: project.css
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  deploy_server.sh  go.mod  go.sum
server/cmd/: app.go
server/fdp_server/: app.go  app_test.go  go.mod  go.sum
server/fdp_server/controller/: control.go
server/fdp_server/dbconn/: dbconn.go  model.go
server/internal/controller/: control.go
server/internal/dbconn/: dbconn.go  model.go
server/src/: main.rs
views/: checkTicket.pug  dashboard.pug  details.pug  error.pug  home.pug  layout.pug  login.pug  tickets.pug
